--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
     <div class="container" style="width: 60vw">
       <!-- heading -->
       <div class="row my-4">
-        <img src="./images/heading.png" class="img-fluid" alt="..." />
+        <img src="assests/images/heading.png" class="img-fluid" alt="..." />
       </div>
       <!-- Name -->
       <div class="input-group mb-3">
@@ -47,10 +47,10 @@
         aria-label="Default select example"
         id="specialization"
       >
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+        <option selected>Specialization</option>
+        <option value="1">CS</option>
+        <option value="2">AI</option>
+        <option value="3">ML</option>
       </select>
 
       <!-- Credit and term -->
@@ -116,6 +116,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script src="./main.js"></script>
+    <script src="assests/javascript/main.js"></script>
   </body>
 </html>
